# pharma-insights-tool

./: .gitignore  README.md  invariants_failures.txt  phase1-status.md  project-plan  pyproject.toml  pytest.ini  run_phase1_end_to_end.ps1  setup.py  tmp_check_invariants.py  tmp_delete_sentence_events.py
config/: indications.json  mock_products.json  narratives.json  narratives_kpis.json  products.json  section_aliases.json  sentiment_lexicon.json  study_type_weights.json
data/: europepmc.sqlite  sentence_events_for_sentiment_sentiment.jsonl
docs/: phase1.md  phase2-narrative.md  phase2-release-checklist.md  sqlite_schema.md
powershell/: README.md  demo.ps1  functional_checks.ps1
scripts/: aggregate_metrics.py  check_narrative_kpis.py  export_batch.py  export_label_precision_sample.py  export_sentence_events_jsonl.py  export_sentiment_metrics.py  export_unlabeled_sentences.py  generate_release_notes.py  ingest_europe_pmc.py  label_sentence_events.py  label_sentence_sentiment.py  load_mock_data.py  metrics_dashboard.py  package_phase2_release.py  phase2_sentiment_refresh.ps1  query_comentions.py  run_phase1_pipeline.py  show_sentence_evidence.py  split_sentences.py  view_labeled_sentences.py  which_doc.py
src/: __init__.py
tests/: COVERAGE_GAPS.md  conftest.py  test_check_narrative_kpis.py  test_cli_scripts.py  test_co_mentions_sentence_level.py  test_context_labels.py  test_evidence.py  test_export_batch.py  test_export_label_precision_sample.py  test_indication_extractor.py  test_ingestion.py  test_ingestion_runner.py  test_label_sentence_sentiment.py  (+13 more)
(+215 files in other folders)
